<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:content=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/createReviewToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:titleTextColor="@color/design_default_color_on_primary"
        android:background="@color/design_default_color_primary"
        app:navigationIcon='@drawable/baseline_close_24'
        app:title="@string/app_name">
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/createReviewRestaurantImage"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:src="@drawable/restaurant1"
            android:padding="5dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/createReviewRestaurantName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/restaurantName"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/createReviewRestaurantLocation"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/restaurantLocation"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/reviewExperienceTitle"
        android:textStyle="bold"
        android:padding="6dp"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:padding="5dp"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createReviewReviewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lines="1"
            android:maxLines="1"
            android:textSize="20sp"
            android:padding="0dp"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:padding="5dp"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createReviewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lines="4"
            android:maxLines="5"
            android:textSize="20sp"
            android:padding="0dp"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/reviewRatingTitle"
        android:textStyle="bold"
        android:padding="6dp"
        android:layout_gravity="center"/>
    <RatingBar
        android:id="@+id/createReviewRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rating="4"
        android:layout_gravity="center"
        android:numStars="5"
        android:stepSize="0.5"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/reviewPictureTitle"
        android:textStyle="bold"
        android:padding="6dp"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/createReviewFoodImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/baseline_photo_camera_24"
            android:layout_weight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/createReviewAddImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_image"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/design_default_color_secondary_variant"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createReviewCreateReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:padding="10dp"
        android:text="@string/postReview"
        android:textAlignment="center"
        android:textSize="16sp"/>
</androidx.appcompat.widget.LinearLayoutCompat>