<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:content=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/createRestaurantToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:titleTextColor="@color/design_default_color_on_primary"
        android:background="@color/design_default_color_primary"
        app:navigationIcon='@drawable/baseline_close_24'
        app:title="@string/app_name">
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:padding="5dp"
        android:hint="@string/restaurant_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createRestaurantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lines="1"
            android:maxLines="1"
            android:textSize="20sp"
            android:padding="0dp"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:padding="5dp"
        android:hint="@string/cuisine">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createRestaurantCuisine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lines="1"
            android:maxLines="1"
            android:textSize="20sp"
            android:padding="0dp"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:padding="5dp"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createRestaurantDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lines="5"
            android:maxLines="5"
            android:textSize="20sp"
            android:padding="0dp"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/createRestaurantImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/baseline_photo_camera_24"
            android:layout_weight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/createRestaurantAddImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_image"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/design_default_color_secondary_variant"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/createRestaurantLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="180dp"
            android:text="@string/no_location_added"
            android:padding="10dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_weight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/createRestaurantAddLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_location"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/design_default_color_secondary_variant"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createRestaurantCreateRestaurantButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:padding="10dp"
        android:text="@string/create_restaurant"
        android:textAlignment="center"
        android:textSize="16sp"/>
</androidx.appcompat.widget.LinearLayoutCompat>